# EmuEight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpu.c  cpu.h  main.c
.github/workflows/: cmake-multi-platform.yml
cmake/: CodeCoverage.cmake
include/: cpu.h
platform/: CMakeLists.txt
platform/libretro/: CMakeLists.txt  libretro.c
platform/sdl/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt  cpu.c
src/platform/sdl/: CMakeLists.txt  main.c
test/core/: CMakeLists.txt  test_cpu.c
